--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<title>Arnon Erba</title>
 
 		<link rel="shortcut icon" type="image/x-icon" href="/images/favicon.png">
-		<link href="styles-min.css?ver=1.5" rel="stylesheet">
+		<link href="styles.min.css?ver=1.5" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
 		<!-- Google Search Console -->
