--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 
 		<title>About</title>
 
-		<link rel="shortcut icon" type="image/x-icon" href="/images/favicon.png">
+		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 		<link href="styles.min.css?ver=1.5" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
