--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 						<li><a href="https://plus.google.com/+arnonerba">Google+</a></li>
 						<li><a href="https://soundcloud.com/arnonerba">SoundCloud</a></li>
 					</ul>
-					<h2>Publishing Platforms</h2>
+					<h2>Publishing platforms</h2>
 					<ul>
 						<li><a href="https://flipboard.com/@ArnonErba">Flipboard</a></li>
 						<li><a href="https://apple.news/TASz31FbfSA2qVLX4Hq4TBA">Apple News</a></li>
