Test with sample HTML markup

--- a/about.html
+++ b/about.html
@@ -7,8 +7,7 @@
 		<title>About</title>
 
 		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
-		<link href="styles.min.css?ver=1.5" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+		<link href="styles.css?ver=2.0" rel="stylesheet">
 
 		<!-- Google Search Console -->
 		<meta name="google-site-verification" content="0opVnIXqhd-1DCNoneerJcu0x4-ZhgDNVmVH9dPAjhw" />
@@ -17,28 +16,52 @@
 	</head>
 	<body>
 		<main>
-			<div id="flexbox-centered">
-				<header id="header">
-					<a class="nav-link" href="https://www.arnonerba.com/">&lt; Back to home</a>
-					<h1>About</h1>
-				</header>
-				<div id="text-holder">
-					<hr>
-					<h2>About me</h2>
-					<p>I like making technology work for people.</p>
-					<p>I've been fascinated by computers ever since I was old enough to browse Craigslist for used hardware to fix old PCs. That hobby turned into a career in professional IT support, where I work with Windows, macOS, and Linux. Currently, I'm a Linux system administrator.</p>
-					<p>In my spare time, I work on cars, build computers, write code, create artwork, write articles for <a href="https://blog.arnonerba.com/">my blog</a>, and try to understand how Kerberos works.</p>
-					<hr>
-					<h2>About this site</h2>
-					<p>Since its creation in 2014, my website has served as a learning experience and a showcase for my online presence. This site began as a simple set of HTML pages served from my home Internet connection by a ten-year-old Dell desktop. As I taught myself HTML and CSS and started work as a freelance web designer, it went through several redesigns and upgrades, but the main concept has remained the same.</p>
-					<p>With this rendition of the site, I'm returning to its roots with a modern twist and a focus on speed. I've moved back to static HTML pages, optimized the images, and eliminated all JavaScript. The mobile and desktop versions of the site use the same CSS style sheet with no breakpoints or media queries.</p>
-					<p>I hope you enjoy navigating this site as much as I've enjoyed creating it.</p>
-					<hr>
+			<article class="window">
+				<div class="outset-outer-border">
+					<div class="outset-inner-border">
+						<div class="window-content">
+							<header class="window-title-bar">
+								<img class="window-program-icon" alt="Arnon Erba" src="images/favicon.png">
+								<h1>About</h1><span>&nbsp;-&nbsp;Notepad</span>
+								<div class="minimize-button"><div class="outset-outer-border"><div class="outset-inner-border"></div></div></div>
+								<div class="maximize-button"><div class="outset-outer-border"><div class="outset-inner-border"></div></div></div>
+								<div class="close-button"><div class="outset-outer-border"><div class="outset-inner-border"></div></div></div>
+							</header>
+							<ul class="window-menu-bar">
+								<li>File</li>
+								<li>Edit</li>
+								<li>Search</li>
+								<li>Help</li>
+							</ul>
+							<div class="inset-outer-border">
+								<div class="inset-inner-border">
+									<div class="window-text">
+										<a href="https://www.arnonerba.com/">Back to home</a>
+										<h1>About</h1>
+										<h2>About me</h2>
+										<p>I like making technology work for people.</p>
+										<p>I've been fascinated by computers ever since I was old enough to browse Craigslist for used hardware to fix old PCs. That hobby turned into a career in professional IT support, where I work with Windows, macOS, and Linux. Currently, I'm a Linux system administrator.</p>
+										<p>In my spare time, I work on cars, build computers, write code, create artwork, write articles for <a href="https://blog.arnonerba.com/">my blog</a>, and try to understand how Kerberos works.</p>
+										<h2>About this site</h2>
+										<p>Since its creation in 2014, my website has served as a learning experience and a showcase for my online presence. This site began as a simple set of HTML pages served from my home Internet connection by a ten-year-old Dell desktop. As I taught myself HTML and CSS and started work as a freelance web designer, it went through several redesigns and upgrades, but the main concept has remained the same.</p>
+										<p>With this rendition of the site, I'm returning to its roots with a modern twist and a focus on speed. I've moved back to static HTML pages, optimized the images, and eliminated all JavaScript. The mobile and desktop versions of the site use the same CSS style sheet with no breakpoints or media queries.</p>
+										<p>I hope you enjoy navigating this site as much as I've enjoyed creating it.</p>
+										<p>TODO: "This site is, and always will be, an place where I can experiment and push the boundaries of what a website should be. Interestingly, this is my third attempt at recreating the Windows 95 GUI with CSS.</p>
+										<p>--------</p>
+										<footer>
+											<p><em>(c) Copyright Arnon Erba 2020</em></p>
+										</footer>
+									</div>
+									<div class="right-scroll-bar">
+										<div class="up-scroll-button"><div class="outset-outer-border"><div class="outset-inner-border"></div></div></div>
+										<div class="down-scroll-button"><div class="outset-outer-border"><div class="outset-inner-border"></div></div></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
-				<footer id="footer">
-					<p>&copy; Arnon Erba 2019</p>
-				</footer>
-			</div>
+			</article>
 		</main>
 	</body>
 </html>
