--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Arnon Erba's official website, since 2014. About Me / My Art / Contact Me. I work in IT and I like making technology work for people. © Arnon Erba 2019">
+		<meta name="description" content="Arnon Erba's official website, since 2014. About Me / My Art / Contact Me. I work in IT and I like making technology work for people. © Arnon Erba 2020">
 
 		<title>Arnon Erba</title>
 
 		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
-		<link href="styles.min.css?ver=1.5" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+		<link href="styles.css?ver=2.0" rel="stylesheet">
 
 		<!-- Google Search Console -->
 		<meta name="google-site-verification" content="0opVnIXqhd-1DCNoneerJcu0x4-ZhgDNVmVH9dPAjhw" />
@@ -18,40 +17,51 @@
 	</head>
 	<body>
 		<main>
-			<div id="flexbox-centered">
-				<header id="header">
-					<h1>Arnon Erba</h1>
-				</header>
-				<div id="cards-holder">
-					<div class="about card">
-						<a href="about" class="card-link"></a>
-						<div class="card-overlay">
-							<h2>01. About</h2>
-						</div>
-					</div>
-					<div class="art card">
-						<a href="art" class="card-link"></a>
-						<div class="card-overlay">
-							<h2>02. Art</h2>
-						</div>
-					</div>
-					<div class="contact card">
-						<a href="contact" class="card-link"></a>
-						<div class="card-overlay">
-							<h2>03. Contact</h2>
-						</div>
-					</div>
-					<div class="blog card">
-						<a href="https://blog.arnonerba.com/" class="card-link"></a>
-						<div class="card-overlay">
-							<h2>04. Blog</h2>
+			<article class="window">
+				<div class="outset-outer-border">
+					<div class="outset-inner-border">
+						<div class="window-content">
+							<header class="window-title-bar">
+								<img class="window-program-icon" alt="Arnon Erba" src="images/favicon.png">
+								<h1>Arnon Erba</h1><span>&nbsp;-&nbsp;Notepad</span>
+								<div class="minimize-button"><div class="outset-outer-border"><div class="outset-inner-border"></div></div></div>
+								<div class="maximize-button"><div class="outset-outer-border"><div class="outset-inner-border"></div></div></div>
+								<div class="close-button"><div class="outset-outer-border"><div class="outset-inner-border"></div></div></div>
+							</header>
+							<ul class="window-menu-bar">
+								<li>File</li>
+								<li>Edit</li>
+								<li>Search</li>
+								<li>Help</li>
+							</ul>
+							<div class="inset-outer-border">
+								<div class="inset-inner-border">
+									<div class="window-text">
+										<p>Welcome To arnonerba.com</p>
+										<p>--------</p>
+										<h2>[<a>About</a>]<span>(www.arnonerba.com/about)</span></h2>
+										<p>Read my bio and learn about how and why this site was built.</p>
+										<h2>[<a>Art</a>]<span>(www.arnonerba.com/art)</span></h2>
+										<p>View some of the artwork that I have created.</p>
+										<h2>[<a>Contact</a>]<span>(www.arnonerba.com/contact)</span></h2>
+										<p>Get in touch with me or follow me on social media.</p>
+										<h2>[<a>Blog</a>]<span>(blog.arnonerba.com)</span></h2>
+										<p>Leave this site and browse my blog, Arnon on Technology.</p>
+										<p>--------</p>
+										<footer>
+											<p><em>(c) Copyright Arnon Erba 2020</em></p>
+										</footer>
+									</div>
+									<div class="right-scroll-bar">
+										<div class="up-scroll-button"><div class="outset-outer-border"><div class="outset-inner-border"></div></div></div>
+										<div class="down-scroll-button"><div class="outset-outer-border"><div class="outset-inner-border"></div></div></div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
-				<footer id="footer">
-					<p>&copy; Arnon Erba 2019</p>
-				</footer>
-			</div>
+			</article>
 		</main>
 	</body>
 </html>
