--- a/art.html
+++ b/art.html
@@ -7,8 +7,7 @@
 		<title>Art</title>
 
 		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
-		<link href="styles.min.css?ver=1.5" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+		<link href="styles.css?ver=2.0" rel="stylesheet">
 
 		<!-- Google Search Console -->
 		<meta name="google-site-verification" content="0opVnIXqhd-1DCNoneerJcu0x4-ZhgDNVmVH9dPAjhw" />
