--- a/art.html
+++ b/art.html
@@ -23,7 +23,7 @@
 					<h1>Art</h1>
 				</header>
 				<div id="text-holder">
-					<p>I work with many different types of media, including pen, pencil, watercolor, and digital. Here's some examples of my work:</p>
+					<p>I work with many different types of media, including pen, pencil, watercolor, and digital.</p>
 					<hr>
 					<h2>Doc's DeLorean</h2>
 					<h3>Digital, 2015</h3>
