--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 					<hr>
 					<h2>About me</h2>
 					<p>I like making technology work for people.</p>
-					<p>I've been fascinated by computers ever since I was old enough to browse Craigslist for used hardware to fix old PCs. That hobby turned into a career in professional IT support, where I work with Windows, macOS, and Linux. Currently, I'm a Linux system administrator.</p>
+					<p>I've been fascinated by computers ever since I was old enough to browse Craigslist for used hardware to fix old PCs. That hobby turned into a career in professional IT support, where I work with Windows, macOS, and Linux. Currently, I'm a Linux sysadmin.</p>
 					<p>In my spare time, I work on cars, build computers, write code, create artwork, write articles for <a href="https://blog.arnonerba.com/">my blog</a>, and try to understand how Kerberos works.</p>
 					<hr>
 					<h2>About this site</h2>
